-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 15.0.0
-
None
-
Win 11
qbs 2.5 (master)
-
-
e8855f97d (14.0), 3d5e7a9f6 (15.0), ecc4d8013 (15.0), d30f694c7 (15.0), 8cffb7dc8 (15.0)
I can't run or debug the application anymore. The message is that the kit has no device, but it still has. Switching the device does not affect the outcome.
I've bisected the issue to 345ae8e4d4e44917f57b3961e4895368b80a3a44
- mentioned in
-
Page Loading...
For Gerrit Dashboard: QTCREATORBUG-31259 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
577392,3 | Utils: Expand FilePaths per part, not as a full string | 14.0 | qt-creator/qt-creator | Status: MERGED | +2 | +1 |
602517,2 | ProjectExplorer: Add device fallback for run control | 15.0 | qt-creator/qt-creator | Status: MERGED | +2 | +1 |
602695,5 | FilePath: Don't break Windows paths with device | 15.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
603087,9 | Utils: Fix FilePath::fromString for remote windows paths | 15.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |