Utils: Expand FilePaths per part, not as a full string

Avoid the potential side effects from the toString/fromUserInput round
trip.

Fixes: QTCREATORBUG-31259
Change-Id: Id004d71079b4ef8ac26b927921c5cd7a23531110
Reviewed-by: Christian Stenger <christian.stenger@qt.io>
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>