src/libs/utils/macroexpander.cpp
@@ -274,7 +274,10 @@ QString MacroExpander::expand(const QString &stringWithVariables) const
 FilePath MacroExpander::expand(const FilePath &fileNameWithVariables) const
 {
     // We want single variables to expand to fully qualified strings.
-    return FilePath::fromUserInput(expand(fileNameWithVariables.toString()));
+    const QString host = expand(fileNameWithVariables.host().toString());
+    const QString scheme = expand(fileNameWithVariables.scheme().toString());
+    const QString path = expand(fileNameWithVariables.path());
+    return FilePath::fromParts(scheme, host, path);
 }
 
 QByteArray MacroExpander::expand(const QByteArray &stringWithVariables) const
